src/css/log.viewer.scss
$images: "./../../assets";
$borderColor: "rgb(204, 204, 204)";
$color: "#333";
$panelBackground: "rgb(240, 240, 240)";
$panelInsetBackground: "rgb(240, 240, 240)";

html,
body {
    overflow: hidden;
    -webkit-user-select: none;
    user-select: none;
    height: 100%;
    width: 100%;
    background-color: grey;
}

::placeholder {
    opacity: 0.5;
}

.btn-toolbar {
    background-color: rgb(245, 245, 245);
    margin-left: 0px !important;
    margin-right: 0px !important;
    padding-top: 2px !important;
    padding-bottom: 2px !important;
    top: 0;
    position: absolute;
    left: 0;
    right: 0;
}

.btn-toolbar .btn {
    outline: none !important;
}

.btn-toolbar button, .panel-heading button {
    min-width: 26px;
}

.btn-toolbar label {
    margin-bottom: 0 !important;
}

.btn-toolbar .label {
    float: left;
    color: black;
    padding: 1px 5px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
    display: inline-block;
    margin-bottom: 0;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
}

#btn-add-dropdown, .btn-caret {
    min-width: auto !important;
}

#editor-buttons > .btn, #editor-buttons > .btn-group, #editor-buttons > .input-group {
    margin-left: 5px;
}

.btn-toolbar input {
    width: auto;
    display: inline-block;
}

.cm-tabstrip .fa-file-pdf-o {
    color: #cc3e44 !important;
}

.cm-tabstrip .fa-file-excel-o {
    color: #8dc149 !important;
}

.cm-tabstrip .fa-file-word-o {
    color: #519aba !important;
}

.cm-tabstrip .fa-file-image-o {
    color: #a074c4 !important;
}

.cm-tabstrip .fa-file-video-o {
    color: #f55385 !important;
}

.cm-tabstrip .fa-file-archive-o {
    color: #6d8086 !important;
}

.datagrid.focused .datagrid-row:hover .icon-o,
.datagrid.focused .datagrid-row:hover .icon-h,
.datagrid.focused .datagrid-row:hover .icon-c,
.datagrid.focused .datagrid-row.selected .icon-o,
.datagrid.focused .datagrid-row.selected .icon-h,
.datagrid.focused .datagrid-row.selected .icon-c {
    color: white !important;
}

.datagrid-row:hover .icon-o,
.datagrid-row:hover .icon-h,
.datagrid-row:hover .icon-c,
.datagrid-row.selected .icon-o,
.datagrid-row.selected .icon-h,
.datagrid-row.selected .icon-c {
    color: black !important;
}

.icon-o {
    color: #8dc149 !important;
}

.icon-h {
    color: #a074c4 !important;
}

.icon-c {
    color: #519aba !important;
}

.cm-tabstrip .fa-map-o {
    color: #8dc149 !important;
}

.editor {
    top: 0;
    bottom: 20px;
    left: 0;
    position: absolute !important;
    right: 0;
    padding: 0;
    margin: 0;
    border: 0;
    border-radius: 0;
    border-top: 1px solid #ccc;
}

.output {
    bottom: 20px;
    left: 0;
    right: 0;
    position: absolute;
    height: 170px;
    padding: 0px;
    cursor: default;
    display: none;
}

.output a {
    /*
    padding-right: 5px;
    padding-left: 5px;
    */
}

#output-toolbar {
    border-top: #ccc 1px solid;
    border-bottom: #ccc 1px solid;
}

#output-toolbar .close {
    font-size: 15px;
    float: right;
    padding: 5px;
}

.output-display {
    position: absolute;
    top: 31px;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    outline: none;
    background: white;
}

.output .error {
    color: red;
    text-decoration: none;
    display: block;
}

.output .warning {
    text-decoration: none;
    color: #DDDD00;
    display: block;
}

.output .error:hover, .output .warning:hover {
    text-decoration: underline;
}

.statusbar {
    bottom: 0;
    position: absolute;
    left: 0;
    right: 0;
    cursor: default;
    height: 20px;
    border-top: #ccc 1px solid;
    background-color: rgb(245, 245, 245);
}

.statusbar span {
    display: inline-block;
    padding-left: 6px;
    padding-right: 6px;
}

.statusbar span.center {
    float: left;
}

.statusbar span.left, .statusbar div.left {
    border-right: #ccc 1px solid;
    float: left;
}

.statusbar span.right, .statusbar div.left {
    float: right;
    border-left: #ccc 1px solid;
    text-align: center;
}

#statusbar-location {
    min-width: 100px;
}

#statusbar-file {
    max-width: 40%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: left;
    /*direction: rtl;*/
}

.ace_status-indicator {
    float: right;
}

.dock-manager {
    top: 26px !important;
    bottom: 20px;
}

.cm-tabpane-container {
    background-color: grey;
    bottom: 1px;
}

.cm-tabpane {
    background-color: #f5f5f5;
}

.cm-tabstrip li {
    opacity: 1;
    color: silver;
}

.cm-tabstrip li.changed {
    background-color: lighten(rgb(218, 255, 181), 10%) !important;
    border-color: lighten(rgb(119, 168, 69), 10%) !important;
    opacity: 1;
    color: black;
}

.cm-tabstrip li.new {
    background-color: lighten(rgb(178, 226, 255), 10%) !important;
    border-color: lighten(rgb(94, 185, 242), 10%) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.changed.active {
    background-color: rgb(218, 255, 181) !important;
    border-color: rgb(119, 168, 69) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.new.active {
    background-color: rgb(178, 226, 255) !important;
    border-color: rgb(94, 185, 242) !important;
    opacity: 1;
    color: black;
}

.focused .cm-tabstrip li.active {
    background-color: rgb(249, 242, 217);
    border-color: rgb(247, 216, 106);
    opacity: 1;
    color: black;
}

.splitter {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    z-index: 1;
}

.splitter-panel {
    position: absolute;
    background-color: #f5f5f5;
}

.spitter-drag-bar {
    background-color: transparent;
    position: absolute;
    z-index: 100;
    background-color: #f5f5f5;
    outline: none;
}

.splitter-ghost-bar {
    background-color: #000;
    opacity: 0.5;
    position: absolute;
    z-index: 999;
    outline: none;
}

.form-control-feedback,
.form-error {
    display: none;
}

.has-error .form-control-feedback {
    display: inline;
    top: 30px;
}

.has-error .form-error {
    display: block;
}

.aura-error,
.form-error,
.has-error a {
    color: #A94442;
}

.has-error .input-group .form-control-feedback {
    top: -2px;
    right: 30px;
}

dialog .close {
    outline: none !important;
}

.splash-mask {
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    z-index: 9000;
}

.splash-screen {
    display: block;
    background-color: #e6e6e6;
    color: black;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    padding: 20px;
    text-align: center;
    border: 1px solid black;
    -webkit-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    -moz-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
    margin: auto;
    width: 368px;
    height: 120px;
    position: relative;
    top: 50%;
    transform: perspective(1px) translateY(-50%);
}

.splash-layout {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    z-index: 10000;
    text-align: center;
}

.splash-screen h1, .splash-screen h3, .splash-screen h6 {
    margin: 0px;
}

.splash-screen h3 {
    margin-top: 10px;
    margin-bottom: 10px;
}

#splashProgress {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    border: 1px solid black;
    border-radius: 4px;
}

#splashProgress::-webkit-progress-bar {
    background-color: #eee;
    border-radius: 4px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}

#splashProgress[value]::-webkit-progress-value {
    border-radius: 4px;
    background-color: #09c;
}

.viewer {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: 0;
    overflow: auto;
    left: 0;
    right: 0;
    -webkit-user-select: text;
    user-select: text;
    color: #BBBBBB;
    font-family: "Courier New", monospace;
    text-align: left;
    font-size: 1em;
    background-color: black;
    text-shadow: none;
    outline: none;
    line-height: inherit;
    border: 0px;
    border-radius: 0;
}

pre.viewer {
    padding: 5px;
    white-space: normal;
}

.html-viewer .line, 
.text-viewer .line,
.line {
    display: block !important;
    position: relative;
}

/*
.html-viewer .ansi, 
.text-viewer .ansi,
.ansi {
    display: inline;
}
*/

.line:last-child {
    margin-right: 5px;
}

.find {
    top: 5px;
    right: 20px;
    padding: 2px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1em;
    border-radius: 4px;
    border: 1px solid #{$borderColor};
    background-color: #{$panelBackground};
    color: #{$color};
    text-shadow: 0 1px 0 #fff;
}

.find input,
.find input:focus {
    border: 1px solid #{$borderColor};
    width: 100px;
    background-color: white;
    color: black;
    padding: 2px 2px;
    height: 22px;
    top: -1px;
    border-radius: 2px;
}

.find input:focus {
    border: 1px solid adadad;
    color: #{$color};
}

.find button .fa {
    margin-top: 3px;
}

.find button {
    width: 22px;
    height: 22px;
    border: 1px solid transparent;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    vertical-align: top;
    line-height: 16px;
    color: inherit;
    background-color: inherit;
    padding: 0px;
    margin-left: 2px;
    margin-right: 2px;
    border-radius: 2px;
}

.find button:hover,
.find button.active:hover {
    color: #{$color};
    background-color: #e0e0e0;
    background-position: 0 -15px;
    color: #333;
    border-color: #adadad;
    text-shadow: 0 1px 0 #fff;
}

.find button.active:hover {
    color: #{$color};
    background-color: #a0a0a0;
    background-position: 0 -15px;
    color: #fff;
    border-color: #adadad;
    text-shadow: 0 1px 0 #333;
}

.find button:active {
    border: 1px solid #0052A4;
}

.find button:disabled,
.find button:disabled:hover {
    background-color: inherit !important;
    background-image: none;
    box-shadow: none;
    opacity: .25;
    border: 1px solid transparent;
    color: #666;
}

.find button.active {
    background-color: #666;
    border-color: #ccc;
    text-shadow: 0 1px 0 #{$color};
    color: #fff;
}

.find-count {
    padding: 0px;
}

.find-case {
    font-size: 10px;
}

.find-word {
    text-decoration: overline underline;
    font-size: 10px;
}

.find-highlight {
    border-radius: 4px;
    background: rgb(171, 102, 31);
}

.find-no-results {
    color: #F08080;
}

.find-highlight.current {
    border-radius: 4px;
    background: rgb(116, 192, 114);
}

